[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/Man/yeest.png" type="Texture" id=1]
[ext_resource path="res://rescourses/light.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 2 )
shadow_enabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -56, -18 )
texture = ExtResource( 1 )
offset = Vector2( 77, 13 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -5 )
current = true
zoom = Vector2( 1.3, 1.3 )
smoothing_enabled = true

[node name="HitPoint" type="Polygon2D" parent="."]
visible = false
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( 2, 2, -2, 2, -2, -2, 2, -2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 11, 0 )
enabled = true
cast_to = Vector2( 1000, 0 )
collision_mask = 13
collide_with_areas = true

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 61, 0 )

[node name="MuzzleFlash" type="Light2D" parent="Muzzle"]
enabled = false
texture = ExtResource( 2 )
texture_scale = 0.39
color = Color( 0.976471, 0.933333, 0.309804, 1 )
shadow_enabled = true

[node name="cylce_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Player"]]
position = Vector2( 0, -5 )
shape = SubResource( 1 )
one_way_collision_margin = 128.0

[node name="dashtimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="cylce_timer" to="." method="_on_cylce_timer_timeout"]
[connection signal="timeout" from="dashtimer" to="." method="_on_dashtimer_timeout"]
